--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -58,35 +58,35 @@ teams <- read_csv("raw-data/nhl_teams.csv", col_types = cols(
   select(-web_scraper_order, -web_scraper_start_url) %>% 
   filter(team != is.na(team)) %>% 
   distinct(team, season, .keep_all = TRUE) %>% 
-  mutate(color = case_when(team == "Anaheim Ducks" ~ "golden_rod3",
-                           team == "Arizona Coyotes" ~ "tan",
-                           team == "Boston Bruins" ~ "golden_rod3",
-                           team == "Buffalo Sabres"~ "navy",
-                           team == "Carolina Hurricanes" ~ "dodgerblue4",
+  mutate(color = case_when(team == "Anaheim Ducks" ~ "'golden_rod3'",
+                           team == "Arizona Coyotes" ~ "'tan'",
+                           team == "Boston Bruins" ~ "'golden_rod3'",
+                           team == "Buffalo Sabres"~ "'navy'",
+                           team == "Carolina Hurricanes" ~ "'dodgerblue4'",
                            team == "Columbus Blue Jackets" ~ "golden_rod3",
-                           team == "Calgary Flames" ~ "brown2",
-                           team == "Chicago Blackhawks" ~ "red",
-                           team == "Colorado Avalanche" ~ "palevioletred4",
-                           team == "Dallas Stars" ~ "seagreen4",
-                           team == "Detroit Red Wings" ~ "red",
-                           team == "Edmonton Oilers" ~ "orangered1",
-                           team == "Florida Panthers" ~ "navy",
-                           team == "Los Angeles Kings" ~ "snow3",
-                           team == "Minnesota Wild" ~ "darkgreen",
-                           team == "Montréal Canadiens" ~ "brown3",
-                           team == "New Jersey Devils" ~ "red",
-                           team == "Nashville Predators" ~ "golden_rod3",
-                           team == "New York Islanders" ~ "dodgerblue3",
-                           team == "New York Rangers" ~ "blue",
-                           team == "Ottawa Senators" ~ "brown2",
-                           team == "Philadelphia Flyers" ~ "chocolate1",
-                           team == "Pittsburgh Penguins" ~ "black",
-                           team == "San Jose Sharks" ~ "darkslategray4",
-                           team == "St. Louis Blues" ~ "mediumblue",
-                           team == "Tampa Bay Lightning" ~ "royalblue4",
-                           team == "Toronto Maple Leafs" ~ "dodgerblue4",
-                           team == "Vancouver Canucks" ~ "forestgreen",
-                           team == "Vegas Golden Knights" ~ "lightgoldenrod3",
+                           team == "Calgary Flames" ~ "'brown2'",
+                           team == "Chicago Blackhawks" ~ "'red'",
+                           team == "Colorado Avalanche" ~ "'palevioletred4'",
+                           team == "Dallas Stars" ~ "'seagreen4'",
+                           team == "Detroit Red Wings" ~ "'red'",
+                           team == "Edmonton Oilers" ~ "'orangered1'",
+                           team == "Florida Panthers" ~ "'navy'",
+                           team == "Los Angeles Kings" ~ "'snow3'",
+                           team == "Minnesota Wild" ~ "'darkgreen'",
+                           team == "Montréal Canadiens" ~ "'brown3'",
+                           team == "New Jersey Devils" ~ "'red'",
+                           team == "Nashville Predators" ~ "'golden_rod3'",
+                           team == "New York Islanders" ~ "'dodgerblue3'",
+                           team == "New York Rangers" ~ "'blue'",
+                           team == "Ottawa Senators" ~ "'brown2'",
+                           team == "Philadelphia Flyers" ~ "'chocolate1'",
+                           team == "Pittsburgh Penguins" ~ "'black'",
+                           team == "San Jose Sharks" ~ "'darkslategray4'",
+                           team == "St. Louis Blues" ~ "'mediumblue'",
+                           team == "Tampa Bay Lightning" ~ "'royalblue4'",
+                           team == "Toronto Maple Leafs" ~ "'dodgerblue4'",
+                           team == "Vancouver Canucks" ~ "'forestgreen'",
+                           team == "Vegas Golden Knights" ~ "'lightgoldenrod3'",
                            team == "Winnipeg Jets" ~ "maroon",
                            team == "Washington Capitals" ~ "firebrick3"))
   # separate(season, c("start","end"), sep = "-") %>% 
